<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lbl_style"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/img_banco_sanz"
        android:layout_width="340dp"
        android:layout_height="172dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banco_sanz_1024x419" />

    <TextView
        android:id="@+id/tx_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tx_welcome"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_indicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tx_indicacion"
        android:textColor="#000000" />

    <ScrollView

        android:layout_width="358dp"
        android:layout_height="375dp"
        android:layout_marginBottom="68dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/tx_nombre"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/lbl_style"
                android:ems="10"
                android:hint="Username"
                android:inputType="textPersonName"

                android:textColor="#000000"
                android:textColorHint="#AFA3A3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/tx_pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/lbl_style"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#AFA3A3" />

            <Button
                android:id="@+id/btn_iniciaSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_uno"
                android:text="@string/btn_iniciaSesion"
                android:textColor="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_borrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_uno"
                android:text="@string/borrar" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_uno"
                android:text="@string/btn_registrar" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
